# PyramidUI

./: .gitignore  CMakeLists.txt  Main.c  README.md  ROADMAP.md  build.bat
include/ui_framework/: ui_framework.h
include/ui_framework/core/: event.h  input.h  window.h
include/ui_framework/drawing/: canvas.h  color.h  primitives.h
include/ui_framework/layout/: layout.h
include/ui_framework/pal/: pal_input.h  pal_renderer.h  pal_window.h
include/ui_framework/widgets/: button.h  container.h  label.h  widget.h
src/: Main.c
src/core/: window.c
src/drawing/: canvas.c  color.c  primitives.c
src/pal/sdl/: pal_sdl_input.c  pal_sdl_renderer.c  pal_sdl_window.c
src/widgets/: button.c  widget.c
